re PR c++/13377 (unexpected behavior of namespace usage directive)

PR c++/13377
	* parser.c (cp_parser_lookup_name): Pass LOOKUP_COMPLAIN to
	lookup_name_real on final parse.

	* g++.dg/lookup/ambig4.C: New test.
	* g++.dg/lookup/ambig5.C: New test.
	* g++.dg/tc1/dr101.C: Adjust error markers.

From-SVN: r103669